# guide

./: .gitignore  .gitleaks.toml  .trivy.yaml  .yamllint  AGENTS.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW.md  antsibull-docs.cfg  build.sh  conf.py  docker-compose.yml  index.html  lefthook.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  versions.env
.dde/: config.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  claude.yml  merge.yml  publish.yml  pull-request.yml  test.yml
_static/: custom.css  custom.js
_templates/: layout.html
_templates/components/: code-block.html  doc-sidebar.html  feature-card.html
docs/: _sidebar.md  index.md  regression-checklist.md  skeleton.md  styling_guide.md  variables.md
rst/: index.rst
rst/containers/: docker_ansible.rst  index.rst
rst/github/: action_playbook.rst  index.rst
rst/guide/: environment.rst  index.rst
rst/guide/best-practices/: security.rst  standards.rst
rst/guide/development/: cicd.rst  contributing.rst
rst/guide/getting-started/: architecture.rst  environment.rst  quickstart.rst
rst/guide/reference/: compatibility.rst  troubleshooting.rst
rst/guide/tooling/: index.rst
rst/guide/tutorials/: examples.rst  use-cases.rst
rst/libraries/: go_ansible.rst  index.rst
scripts/: build_frontend.sh  collection_cache.py  normalize_collections.py  run_axe_audit.sh
src/: README.md
src/scripts/: index.js
src/styles/: index.css
tests/: test_normalize_collections.py
(+28 files in other folders)
